--- a/index.html
+++ b/index.html
@@ -15,23 +15,191 @@
 <body>
     <!-- header start -->
     <header>
+        <div class="match-container">
+            <div class="match-info">
+                <h1>Conmebol</h1>
+                <h1>Copa America</h1>
+                <h1>2021</h1>
+                <a class="button" href="#"> Watch live <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="banner">
+                <img src="./images/banner.png" alt="player">
+            </div>
+        </div>
 
     </header>
     <!-- header end -->
 
+    <!-- players information part start -->
     <main>
         <section class="container">
-            <div class="match-container">
-                <div class="match-info">
-                    <h1 class="league-title">Conmebol Copa America 2021</h1>
-                    <a class="button" href="#"> Watch live <i class="fas fa-arrow-right"></i></a>
+            <div class="players">
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-1.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Neymar Jr</h3>
+                        <p class="player-bio">Neymar, is a Brazilian professional footballer who plays as a forward for
+                            Ligue 1 club
+                            Paris
+                            Saint-Germain and the Brazil national team.</p>
+                    </div>
                 </div>
-                <div class="banner">
-                    <img src="./images/banner.png" alt="player">
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-2.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Lionel Messi</h3>
+                        <p class="player-bio">Leo Messi,is an Argentine professional footballer who plays as a
+                            forward or an attacking midfielder and captains the Argentina national team.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-3.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Cristiano Ronaldo</h3>
+                        <p class="player-bio">Cristiano Ronaldo is a Portuguese professional footballer who plays as a
+                            forward for Serie A club Juventus and captains the Portugal national team. </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-4.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Paulo Dybala</h3>
+                        <p class="player-bio">Paulo Exequiel Dybala is an Argentine professional footballer who plays as
+                            a forward for Serie A club Juventus and the Argentina national team.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-5.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Mesut Ozil </h3>
+                        <p class="player-bio">Mesut Ozil is a German professional footballer who plays as an attacking
+                            midfielder for Süper Lig club Fenerbahçe.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-6.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Mauro Icardi</h3>
+                        <p class="player-bio">Mauro Emanuel Icardi is an Argentine professional footballer who plays as
+                            a striker for Paris Saint-Germain and the Argentina national team.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-7.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Di Maria</h3>
+                        <p class="player-bio">Ángel Fabián Di María is an Argentine professional footballer who plays
+                            for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-8.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Kylian Mbappé</h3>
+                        <p class="player-bio">Kylian Mbappé is a French professional footballer who plays as a forward
+                            for Ligue 1 club Paris Saint-Germain and the France national team.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-9.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Mohamed Salah</h3>
+                        <p class="player-bio">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer
+                            who plays as a forward for Premier League club Liverpool.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-10.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Harry Kane</h3>
+                        <p class="player-bio">Harry Edward Kane is an English professional footballer who plays as a
+                            striker for Premier League club Tottenham Hotspur.
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-11.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Kevin De Bruyne</h3>
+                        <p class="player-bio">Kevin De Bruyne is a Belgian professional footballer who plays as a
+                            midfielder for Premier League club Manchester City.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-photo">
+                        <img src="./images/players/player-12.png" alt="neymar">
+                    </div>
+                    <div class="player-description">
+                        <h3 class="player-name">Philippe Coutinho</h3>
+                        <p class="player-bio">Philippe Coutinho is a Brazilian professional footballer who plays as an
+                            attacking midfielder or winger for Spanish club Barcelona.</p>
+                    </div>
                 </div>
             </div>
         </section>
+        <!-- players information part end -->
+
+        <!-- match highlights part start -->
+        <section class="container">
+            <div class="highlights-container">
+                <div class="match-highlights">
+                    <h1>All Highlights Copa America 2021</h1>
+                    <p>Argentina vs Brazil Copa América final: Messi win international trophy, match highlights</p>
+                    <a class="button" href="#"> Watch Now <i class="fas fa-arrow-right"></i></a>
+                </div>
+                <div class="match-image">
+                    <img src="./images/match.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- match highlights part start -->
+
     </main>
+    <!-- footer part start -->
+
+    <footer>
+        <div class="container">
+            <div class="footer-section">
+                <div class="footer-img">
+                    <img src="./images/Logo.png" alt="">
+                </div>
+                <div class="footer-icon">
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-dribbble"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+                <div class="footer-copyright">
+                    <p>Copyright &copy; 2022 Footballl</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <!-- footer part end -->
 </body>
 
 </html>
