--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
         </section>
 
-        <!-- match highlights part start -->
+        <!-- match highlights part end -->
 
     </main>
     <!-- footer part start -->
